--- a/src/main/resources/templates/board/InquireBoardList.html
+++ b/src/main/resources/templates/board/InquireBoardList.html
@@ -28,7 +28,7 @@
                         <div th:if="${j le boardList.size() - 1}" class="card border-info mb-3" style="width: 14rem; cursor: pointer; padding-top: 12px;" th:onclick="|location.href='/board/${boardList[j].id}'|">
                                 <img class="card-img-top" th:src="${boardList[j].image}" alt="Card image cap" style="width: 200px; height: 150px;">
                                 <div class="card-body">
-                                    <h5 class="card-title" style="white-space:nowrap; overflow: hidden; text-overflow: ellipsis;" th:text="${boardList[j].title}">Card title</h5>
+                                    <h6 class="card-title" style="white-space:nowrap; overflow: hidden; text-overflow: ellipsis; font-weight: bold" th:text="${boardList[j].title}">Card title</h6>
                                     <p class="card-text">
                                         <small class="text-muted" th:text="${boardList[j].city}"></small> ·
                                         <small class="text-muted" th:text="${boardList[j].diffCreatedAt}"></small>
