--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -10,15 +10,16 @@
                 <form action="/login_proc" method="POST">
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-                        <button type="button" class="btn btn-primary btn-floating mx-1 btn-social" data-social="facebook">
-                            <img src="https://img.icons8.com/material-outlined/24/000000/facebook-circled--v1.png"/>
+
+                        <button type="button" class="btn btn-light btn-floating mx-1 btn-social" data-social="google">
+                            <img src="/images/google.PNG" style="width:25px; height:25px"/>
                         </button>
 
-                        <button type="button" class="btn btn-primary btn-floating mx-1 btn-social" data-social="google">
-                            <img src="https://img.icons8.com/material-rounded/24/000000/google-logo.png"/>
+                        <button type="button" class="btn btn-light btn-floating mx-1 btn-social" data-social="naver">
+                            <img src="/images/naver.PNG" style="width:25px; height:25px"/>
                         </button>
 
-                        <button type="button" class="btn btn-primary btn-floating mx-1 btn-social" data-social="kakao">
+                        <button type="button" class="btn btn-light btn-floating mx-1 btn-social" data-social="kakao">
                             <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/24/000000/external-free-instant-messaging-app-for-cross-platform-devices-logo-color-tal-revivo.png"/>
                         </button>
                     </div>
