--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,10 +25,10 @@
                 <button sec:authorize="isAuthenticated()" type="button" class="btn btn-outline-secondary btn-space" th:onclick="|location.href='/board/new'|">내 물건 팔기</button>
                 <li th:with="auth=${#authentication.getPrincipal().getMember()}" sec:authorize="isAuthenticated()" class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img th:if="${auth.getProvider() eq 'daanngn'}" src="https://img.icons8.com/color/30/000000/carrot.png"/>
-                        <img th:if="${auth.getProvider() eq 'facebook'}" src="/images/facebook.PNG"/>
-                        <img th:if="${auth.getProvider() eq 'google'}" src="/images/google.PNG"/>
-                        <img th:if="${auth.getProvider() eq 'kakao'}" src="/images/kakao.PNG" style="width: 30px; height: 30px">
+                        <img th:if="${auth.getProvider() eq 'daanngn'}" src="https://img.icons8.com/color/35/000000/carrot.png"/>
+                        <img th:if="${auth.getProvider() eq 'naver'}" src="/images/naver.PNG" style="width: 35px; height: 35px"/>
+                        <img th:if="${auth.getProvider() eq 'google'}" src="/images/google.PNG" style="width: 35px; height: 35px"/>
+                        <img th:if="${auth.getProvider() eq 'kakao'}" src="/images/kakao.PNG" style="width: 35px; height: 35px"/>
                         <span th:text="${auth.getNickname()}"></span>
                     </a>
                     <ul class="dropdown-menu">
