--- a/src/main/resources/templates/board/InquireBoard.html
+++ b/src/main/resources/templates/board/InquireBoard.html
@@ -6,7 +6,7 @@
 <body>
 <div class="container">
     <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="card mb-3" style="width: 30rem; padding-top: 12px;">
+        <div class="card mb-3" style="width: 40rem; padding-top: 12px;">
             <img th:src="${board.image}" class="card-img-top" alt="...">
             <div class="card-header bg-transparent">
                 <p class="card-title" th:text="${board.nickname}" style="font-weight: bold"></p>
@@ -31,6 +31,11 @@
                 <span class="card-text" th:text="|${#numbers.formatInteger(board.price, 0, 'COMMA')}￦|"></span>
                 <a href="#" class="btn btn-primary" style="float:right; background-color: orange; border-color: orange">채팅하기</a>
             </div>
+        </div>
+        <br><br><br><br>
+        <div style="width: 60rem; padding:50px; border: 1px solid lightgray; border-radius: 20px;">
+            <textarea rows="3" cols="113"></textarea>
+            <button id="submitBtn" class="btn btn-primary btn-lg" type="button" style="float:right;">댓글 쓰기</button>
         </div>
     </div>
 </div>
