--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -20,7 +20,7 @@
                         </button>
 
                         <button type="button" class="btn btn-light btn-floating mx-1 btn-social" data-social="kakao">
-                            <img src="https://img.icons8.com/external-tal-revivo-color-tal-revivo/24/000000/external-free-instant-messaging-app-for-cross-platform-devices-logo-color-tal-revivo.png"/>
+                            <img src="/images/kakao.png" style="width:25px; height:25px"/>
                         </button>
                     </div>
 
@@ -60,6 +60,7 @@
         </div>
     </div>
     <script th:inline="javascript">
+
         let socials = document.getElementsByClassName("btn-social");
         for (let social of socials) {
             social.addEventListener('click', function () {
