--- a/src/main/resources/templates/board/InquireBoard.html
+++ b/src/main/resources/templates/board/InquireBoard.html
@@ -32,10 +32,28 @@
                 <a href="#" class="btn btn-primary" style="float:right; background-color: orange; border-color: orange">채팅하기</a>
             </div>
         </div>
-        <br><br><br><br>
-        <div style="width: 60rem; padding:50px; border: 1px solid lightgray; border-radius: 20px;">
-            <textarea rows="3" cols="113"></textarea>
-            <button id="submitBtn" class="btn btn-primary btn-lg" type="button" style="float:right;">댓글 쓰기</button>
+        <div style="padding:50px; border: 1px solid lightgray; border-radius: 20px; display: flex; justify-content: center; margin-top: 50px;">
+            <textarea id="content" rows="4" cols="113" placeholder="댓글을 입력해주세요."></textarea>
+            <button id="commentBtn" class="btn btn-primary btn-lg" type="button" style="margin-left: 20px">댓글 쓰기</button>
+        </div>
+        <div style="margin-top: 70px;">
+            <ul class="myList">
+                <li class="myListContent">
+                    <div style="margin-bottom: 70px;">
+                        <div style="float: left; display: inline-block">
+                            <h5 id="writer-nickname" style="font-weight: bold;">messi1</h5>
+                            <span id="writer-city" th:class="text-muted">안양시 동안구</span> · <span id="writer-diffAt" th:class="text-muted">10분전</span>
+                        </div>
+                        <div style="float: right; display: inline-block;">
+                            <span>좋아요</span><br>
+                            <span id="comment-like" th:class="text-muted">31</span>
+                        </div>
+                    </div>
+                    <div>
+                        <h5>content</h5>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
@@ -66,6 +84,23 @@
                 }
             }
         })
+    });
+
+    $("#commentBtn").on('click', function () {
+        $.ajax({
+            url: "/board/" + boardId + "/comment/new.do",
+            type: "post",
+            data: {"content" : $("#content").val()},
+            contentType : "application/x-www-form-urlencoded; charset=utf-8",
+            dataType : "json",
+            sync: false,
+            success: function (writeInfo) {
+                // alert(writeInfo.memberId);
+                // alert(writeInfo.nickname);
+                // alert(writeInfo.city);
+
+            }
+        });
     });
 
     /*]]>*/
