--- a/src/main/resources/templates/board/InquireBoard.html
+++ b/src/main/resources/templates/board/InquireBoard.html
@@ -37,21 +37,34 @@
             <button id="commentBtn" class="btn btn-primary btn-lg" type="button" style="margin-left: 20px">댓글 쓰기</button>
         </div>
         <div style="margin-top: 70px;">
-            <ul class="myList">
-                <li class="myListContent">
+            <ul class="myList" id="commentUl">
+                <li th:id="|li-${comment.id}|" class="myListContent" th:each="comment : ${board.commentList}">
+                    <br>
                     <div style="margin-bottom: 70px;">
                         <div style="float: left; display: inline-block">
-                            <h5 id="writer-nickname" style="font-weight: bold;">messi1</h5>
-                            <span id="writer-city" th:class="text-muted">안양시 동안구</span> · <span id="writer-diffAt" th:class="text-muted">10분전</span>
+                            <div style="float: left; margin-right: 10px;">
+                                <img th:if="${comment.provider eq 'daanngn'}" src="https://img.icons8.com/color/35/000000/carrot.png" alt="daanngn">
+                                <img th:if="${comment.provider eq 'naver'}" src="/images/naver.PNG" style="width: 35px; height: 35px" alt="naver"/>
+                                <img th:if="${comment.provider eq 'google'}" src="/images/google.PNG" style="width: 35px; height: 35px" alt="google"/>
+                                <img th:if="${comment.provider eq 'kakao'}" src="/images/kakao.png" style="width: 35px; height: 35px" alt="kakao"/>
+                            </div>
+                            <div style="float: right">
+                                <h5 style="font-weight: bold;" th:text="${comment.nickname}"></h5>
+                                <span class="text-muted" th:text="${comment.city}"></span> · <span class="text-muted" th:text="${comment.diffCreatedAt}"></span>
+                            </div>
                         </div>
-                        <div style="float: right; display: inline-block;">
-                            <span>좋아요</span><br>
-                            <span id="comment-like" th:class="text-muted">31</span>
+                        <div style="float:right; display: inline-block;">
+                            <button class="likeBtn" style="margin-right: 5px; border:0; outline: 0; background-color: transparent;" th:value="${comment.id}">
+                                <img src="https://img.icons8.com/external-anggara-outline-color-anggara-putra/32/000000/external-like-support-anggara-outline-color-anggara-putra-2.png"/>
+                                <img src="https://img.icons8.com/external-anggara-filled-outline-anggara-putra/32/000000/external-like-support-anggara-filled-outline-anggara-putra-2.png"/>
+                            </button>
+                            <span style="font-size: 20px;">31</span>
                         </div>
                     </div>
                     <div>
-                        <h5>content</h5>
+                        <h5 th:text="${comment.content}"></h5>
                     </div>
+                    <br>
                 </li>
             </ul>
         </div>
@@ -60,6 +73,7 @@
 
 <script async th:inline="javascript">
     /*<![CDATA[*/
+
 
     let boardId = /*[[${board.id}]]*/;
 
@@ -86,6 +100,19 @@
         })
     });
 
+    $(".likeBtn").on('click', function () {
+        let commentId = $(this).val();
+        $.ajax({
+            url: "/comment/" + commentId + "/like/process.do",
+            type: "post",
+            sync: false,
+            success: function (likeInpYn) {
+                alert(likeInpYn);
+            }
+        });
+    });
+
+
     $("#commentBtn").on('click', function () {
         $.ajax({
             url: "/board/" + boardId + "/comment/new.do",
@@ -95,10 +122,41 @@
             dataType : "json",
             sync: false,
             success: function (writeInfo) {
-                // alert(writeInfo.memberId);
-                // alert(writeInfo.nickname);
-                // alert(writeInfo.city);
 
+                let imgTag;
+
+                if (writeInfo.provider === "daanngn") {
+                    imgTag = "<img src=\"https://img.icons8.com/color/35/000000/carrot.png\" alt=\"daanngn\">";
+                } else if (writeInfo.provider === "naver") {
+                    imgTag = "<img src=\"/images/naver.PNG\" style=\"width: 35px; height: 35px\" alt=\"naver\"/>";
+                } else if (writeInfo.provider === "google") {
+                    imgTag = "<img src=\"/images/google.PNG\" style=\"width: 35px; height: 35px\" alt=\"google\"/>";
+                } else if (writeInfo.provider === "kakao") {
+                    imgTag = "<img src=\"/images/kakao.png\" style=\"width: 35px; height: 35px\" alt=\"kakao\"/>";
+                }
+
+                $("#commentUl").append(
+                    "<li id=\"" + writeInfo.commentId + "\" class=\"myListContent\">" +
+                        "<div style=\"margin-bottom: 70px;\">" +
+                            "<div style=\"float: left; display: inline-block\">" +
+                                "<div style=\"float: left; margin-right: 10px;\">" +
+                                    imgTag +
+                                "</div>" +
+                                "<div style=\"float: right;\">" +
+                                    "<h5 style=\"font-weight: bold;\">" + writeInfo.nickname + "</h5>" +
+                                    "<span class=\"text-muted\">" + writeInfo.city + "</span> · <span class=\"text-muted\">" + writeInfo.diffCreatedAt + "</span>" +
+                                "</div>" +
+                            "</div>" +
+                            "<div style=\"float: right; display: inline-block;\">" +
+                                "<span>좋아요</span><br>" +
+                                "<span class=\"text-muted\">31</span>" +
+                            "</div>" +
+                        "</div>" +
+                        "<div>" +
+                            "<h5>" + writeInfo.content + "</h5>" +
+                        "</div>" +
+                    "</li>"
+                )
             }
         });
     });
